// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsxWrapperCodemod should correctly transform aliasedImport.tsx: aliasedImport.tsx 1`] = `
"import type {AppProps} from "next/app";
import {ReactElement} from "react";
import {CroctProvider as Provider} from "@croct/plug-react";

export default function App({Component, pageProps}: AppProps): ReactElement {
    return (<Provider>
        <Component {...pageProps} />
    </Provider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerAliasedImport.tsx: containerAliasedImport.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";
import {Analytics as Shopify} from '@shopify/hydrogen';

export default function App({data}) {
    return (<Shopify.Provider cart={data.cart} shop={data.shop} consent={data.consent}>
<CroctProvider>

            <PageLayout {...data}>
                <Outlet />
            </PageLayout>

        </CroctProvider>
</Shopify.Provider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerAlreadyWrapped.tsx: containerAlreadyWrapped.tsx 1`] = `
"import {Analytics} from '@shopify/hydrogen';
import {CroctProvider} from '@croct/plug-react';

export default function App({data}) {
    return <Analytics.Provider cart={data.cart} shop={data.shop} consent={data.consent}>
        <CroctProvider>
            <PageLayout {...data}>
                <Outlet />
            </PageLayout>
        </CroctProvider>
    </Analytics.Provider>;
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerEarlyReturn.tsx: containerEarlyReturn.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";
import {Analytics} from '@shopify/hydrogen';

export default function App() {
    const data = useRouteLoaderData('root');

    if (!data) {
        return <Outlet />;
    }

    return (<Analytics.Provider cart={data.cart} shop={data.shop} consent={data.consent}>
<CroctProvider>

            <PageLayout {...data}>
                <Outlet />
            </PageLayout>

        </CroctProvider>
</Analytics.Provider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerIdentifierElement.tsx: containerIdentifierElement.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function App({data}) {
    return (<Providers>
<CroctProvider>

            <PageLayout {...data} />

        </CroctProvider>
</Providers>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerMemberExpression.tsx: containerMemberExpression.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";
import {Analytics} from '@shopify/hydrogen';

export default function App({data}) {
    return (<Analytics.Provider cart={data.cart} shop={data.shop} consent={data.consent}>
<CroctProvider>

            <PageLayout {...data}>
                <Outlet />
            </PageLayout>

        </CroctProvider>
</Analytics.Provider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerNamespaced.tsx: containerNamespaced.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function App() {
    return (<svg>
        <svg:g>
<CroctProvider>

                <PageLayout />

            </CroctProvider>
</svg:g>
    </svg>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerNotFound.tsx: containerNotFound.tsx 1`] = `
"export default function App({data}) {
    return <div>
        <PageLayout {...data}>
            <Outlet />
        </PageLayout>
    </div>;
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerRemixTernary.tsx: containerRemixTernary.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";
import {Analytics} from '@shopify/hydrogen';

export function Layout({children}) {
    const data = useRouteLoaderData('root');

    return (<html>
        <body>
            {data ? (
                <Analytics.Provider cart={data.cart} shop={data.shop} consent={data.consent}>
<CroctProvider>

                        <PageLayout {...data}>{children}</PageLayout>

                    </CroctProvider>
</Analytics.Provider>
            ) : (
                children
            )}
        </body>
    </html>);
}

export default function App() {
    return <Outlet />;
}
"
`;

exports[`JsxWrapperCodemod should correctly transform containerSelfClosing.tsx: containerSelfClosing.tsx 1`] = `
"import {Analytics} from '@shopify/hydrogen';

export default function App() {
    return <Analytics.Provider />;
}
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExport.tsx: defaultExport.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";
import type {AppProps} from "next/app";
import {ReactElement} from "react";

export default function App({Component, pageProps}: AppProps): ReactElement {
    return (<CroctProvider>
        <Component {...pageProps} />
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportAnonymousFunctionWithUnrelatedReturn.tsx: defaultExportAnonymousFunctionWithUnrelatedReturn.tsx 1`] = `
"export default function () {
    return null;
}
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportArrowFunctionReference.tsx: defaultExportArrowFunctionReference.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

const Layout = ({children}) => {
    return (<>
        <main>
            <CroctProvider>
                {children}
            </CroctProvider>
        </main>
    </>);
}

export default Layout;
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportArrowFunctionWithUnrelatedReturn.tsx: defaultExportArrowFunctionWithUnrelatedReturn.tsx 1`] = `
"export default () => null;
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportFunctionExpressionReference.tsx: defaultExportFunctionExpressionReference.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

const Layout = function ({children}) {
    return (<>
        <main>
            <CroctProvider>
                {children}
            </CroctProvider>
        </main>
    </>);
}

export default Layout;
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportFunctionReference.tsx: defaultExportFunctionReference.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

function Layout({children}) {
    return (<>
        <main>
            <CroctProvider>
                {children}
            </CroctProvider>
        </main>
    </>);
}

export default Layout;
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportFunctionWithoutReturn.tsx: defaultExportFunctionWithoutReturn.tsx 1`] = `
"export default function () {
}
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportIndirectReference.tsx: defaultExportIndirectReference.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

// Block scoped variable, unrelated to the default export
{
    const Layout = () => {
    }

    const Reference = Layout;
}

const Layout = ({children}) => {
    return (<CroctProvider>
        <>
            <main>
                {children}
            </main>
        </>
    </CroctProvider>);
}

const Reference = Layout;
export default Reference;
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportUninitializedReference.tsx: defaultExportUninitializedReference.tsx 1`] = `
"let Component;

export default Component;
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportUnrelated.tsx: defaultExportUnrelated.tsx 1`] = `
"export default 1;
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportWrapped.tsx: defaultExportWrapped.tsx 1`] = `
"import type {AppProps} from "next/app";
import {ReactElement} from "react";
import {CroctProvider} from "@croct/plug-react";

export default function App({Component, pageProps}: AppProps): ReactElement {
    return (
        <CroctProvider>
            <Component {...pageProps} />;
        </CroctProvider>
    );
}
"
`;

exports[`JsxWrapperCodemod should correctly transform defaultExportWrappedAlias.tsx: defaultExportWrappedAlias.tsx 1`] = `
"import type {AppProps} from "next/app";
import {ReactElement} from "react";
import {CroctProvider as Provider} from "@croct/plug-react";

export default function App({Component, pageProps}: AppProps): ReactElement {
    return (
        <Provider>
            <Component {...pageProps} />;
        </Provider>
    );
}
"
`;

exports[`JsxWrapperCodemod should correctly transform namedExportArrowFunction.tsx: namedExportArrowFunction.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

const UnrelatedComponent = ({Component, pageProps}) => {
    return <Component {...pageProps} />;
}

export const App = ({Component, pageProps}) => (
    <CroctProvider>
        <Component {...pageProps} />
    </CroctProvider>
);
"
`;

exports[`JsxWrapperCodemod should correctly transform namedExportArrowFunctionWithBody.tsx: namedExportArrowFunctionWithBody.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

const UnrelatedComponent = ({Component, pageProps}) => {
    return <Component {...pageProps} />;
}

export const App = ({Component, pageProps}) => {
    return (<CroctProvider>
        <Component {...pageProps} />
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform namedExportArrowFunctionWrapped.tsx: namedExportArrowFunctionWrapped.tsx 1`] = `
"import {CroctProvider} from "@croct/plug-react";

const UnrelatedComponent = ({Component, pageProps}) => {
    return <Component {...pageProps} />;
}

export const App = ({Component, pageProps}) => (
    <CroctProvider>
        <Component {...pageProps} />
    </CroctProvider>
);
"
`;

exports[`JsxWrapperCodemod should correctly transform namedExportFunctionDeclaration.tsx: namedExportFunctionDeclaration.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

const UnrelatedComponent = ({Component, pageProps}) => {
    return <Component {...pageProps} />;
}

export function App({Component, pageProps}) {
    return (<CroctProvider>
        <Component {...pageProps} />
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform namedExportFunctionExpression.tsx: namedExportFunctionExpression.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

const UnrelatedComponent = ({Component, pageProps}) => {
    return <Component {...pageProps} />;
}

export const App = function ({Component, pageProps}) {
    return (<CroctProvider>
        <Component {...pageProps} />
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform namedExportUnrelated.tsx: namedExportUnrelated.tsx 1`] = `
"export const foo = 1;
"
`;

exports[`JsxWrapperCodemod should correctly transform namedSpecifiedExport.tsx: namedSpecifiedExport.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

// Block scoped variable, unrelated to the default export
{
    function Layout() {
    }

    const Reference = Layout;
}

function unrelated() {

}

const Layout = ({children}) => {
    return (<CroctProvider>
        <>
            <main>
                {children}
            </main>
        </>
    </CroctProvider>);
}

const Reference = Layout;
export { Reference as Layout };
"
`;

exports[`JsxWrapperCodemod should correctly transform parenthesizedReturn.tsx: parenthesizedReturn.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function App({Component, pageProps}) {
    return (<CroctProvider>
        <div>
            <section>
                <Component {...pageProps} />
            </section>
        </div>
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform providerLiteralProp.tsx: providerLiteralProp.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function Layout({children}) {
    return (<CroctProvider booleanProp={true} numberProp={42} stringProp={"value"} nullProp={null}>
        <>
            <main>{children}</main>
        </>
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform providerObjectMemberProp.tsx: providerObjectMemberProp.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function Layout({children}) {
    return (<CroctProvider appId={process.env.REACT_APP_CROCT_APP_ID}>
        <>
            <main>{children}</main>
        </>
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform providerTernaryProp.tsx: providerTernaryProp.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function Layout({children}) {
    return (<CroctProvider
        booleanProp={process.env.NODE_ENV === "production" ? process.env.PRODUCTION_CROCT_APP_ID : process.env.STAGING_CROCT_APP_ID}>
        <>
            <main>{children}</main>
        </>
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform providerVariableProp.tsx: providerVariableProp.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function Layout({children}) {
    return (<CroctProvider appId={CROCT_APP_ID}>
        <>
            <main>{children}</main>
        </>
    </CroctProvider>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform targetChildren.tsx: targetChildren.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function Layout({children}) {
    return (<html lang="en">
        <body>
            {/* This is a comment */}
            <CroctProvider>
                {children}
            </CroctProvider>
        </body>
    </html>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform targetChildrenAliasedImport.tsx: targetChildrenAliasedImport.tsx 1`] = `
"import {CroctProvider as Provider} from "@croct/plug-react";

export default function Layout({children}) {
    return (<html lang="en">
        <body>
            {/* This is a comment */}
            <Provider>
                {children}
            </Provider>
        </body>
    </html>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform targetComponent.tsx: targetComponent.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function App({Component, pageProps}) {
    return (<div>
        <section>
            <CroctProvider>
                <Component {...pageProps} />
            </CroctProvider>
        </section>
    </div>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform targetComponentMemberExpression.tsx: targetComponentMemberExpression.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";
import {Theme} from 'ui';

export default function App({Component, pageProps}) {
    return (<div>
        <CroctProvider>
            <Theme.Provider>
                <Component {...pageProps} />
            </Theme.Provider>
        </CroctProvider>
    </div>);
}
"
`;

exports[`JsxWrapperCodemod should correctly transform targetSingleChild.tsx: targetSingleChild.tsx 1`] = `
"import { CroctProvider } from "@croct/plug-react";

export default function App({Component, pageProps}) {
    return (<section>
        <CroctProvider>
            <Component {...pageProps} />
        </CroctProvider>
    </section>);
}
"
`;
